# traccc

benchmarks/common/benchmarks/: toy_detector_benchmark.hpp
cmake/: traccc-alpaka-functions.cmake  traccc-compiler-options-sycl.cmake
core/include/traccc/fitting/kalman_filter/: kalman_actor.hpp
core/include/traccc/utils/: relations.hpp
device/alpaka/: CMakeLists.txt
device/alpaka/include/traccc/alpaka/clusterization/: clusterization_algorithm.hpp
device/alpaka/include/traccc/alpaka/finding/: finding_algorithm.hpp
device/alpaka/include/traccc/alpaka/fitting/: fitting_algorithm.hpp
device/alpaka/include/traccc/alpaka/seeding/: track_params_estimation.hpp
device/alpaka/include/traccc/alpaka/utils/: get_device_info.hpp  get_vecmem_resource.hpp  thread_id.hpp
device/alpaka/src/clusterization/: clusterization_algorithm.cpp  measurement_sorting_algorithm.cpp
device/alpaka/src/finding/: finding_algorithm.cpp
device/alpaka/src/finding/kernels/: apply_interaction.hpp  build_tracks.hpp  fill_sort_keys.hpp  find_tracks.hpp  make_barcode_sequence.hpp  propagate_to_next_surface.hpp  prune_tracks.hpp
device/alpaka/src/finding/kernels/specializations/: types.hpp
device/alpaka/src/fitting/: fitting_algorithm.cpp
device/alpaka/src/seeding/: seed_finding.cpp  spacepoint_binning.cpp  track_params_estimation.cpp
device/alpaka/src/utils/: get_device_info.cpp  make_prefix_sum_buff.cpp  thread_id.hpp  utils.hpp
device/common/include/traccc/finding/device/: add_links_for_holes.hpp  apply_interaction.hpp  build_tracks.hpp  count_measurements.hpp  find_tracks.hpp  make_barcode_sequence.hpp  propagate_to_next_surface.hpp  prune_tracks.hpp
device/common/include/traccc/finding/device/impl/: add_links_for_holes.ipp  apply_interaction.ipp  build_tracks.ipp  count_measurements.ipp  find_tracks.ipp  make_barcode_sequence.ipp  propagate_to_next_surface.ipp  prune_tracks.ipp
device/cuda/src/finding/kernels/specializations/: types.hpp
examples/run/alpaka/: CMakeLists.txt  full_chain_algorithm.cpp  full_chain_algorithm.hpp  seeding_example_alpaka.cpp  seq_example_alpaka.cpp  throughput_mt.cpp  throughput_st.cpp
examples/simulation/: simulate_telescope.cpp
performance/src/performance/: timing_info.cpp
plugins/algebra/array/include/traccc/plugins/algebra/: array_definitions.hpp
tests/alpaka/: CMakeLists.txt  alpaka_basic.cpp  test_cca.cpp
tests/common/tests/: kalman_fitting_momentum_resolution_test.hpp  kalman_fitting_telescope_test.hpp
tests/cpu/: compare_with_acts_seeding.cpp  test_spacepoint_formation.cpp
tests/cuda/: test_spacepoint_formation.cpp
tests/sycl/: test_spacepoint_formation.sycl
